# c2c

./: .dockerignore  .env.example  .gitignore  .mcp.json  C2C_NORTH_STAR_ACCEPTANCE_CRITERA.md  CLAUDE.md  Dockerfile  Dockerfile.agent  Dockerfile.test  EMERGENCY_COMMS.md  HANDOFF-inj-mcp-pty-ocaml.txt  HANDOFF.md  HANDOFF_C2.md  HANDOFF_P1.md  MIGRATION_STATUS.md  NOTES.md  Q_AND_ISSUES_COORD1.md  README.md  SELF_RESUME_PRIORITIES.md  SOLUTION.md  SPEC.md  TASKS_FROM_MAX.md  _MONITOR_C2C_OPENCODE.md  bench-hook  c2c  c2c-broker-gc  c2c-claude-wake  c2c-cold-boot-hook  c2c-configure-claude-code  c2c-configure-codex  c2c-configure-crush  c2c-configure-kimi  c2c-configure-opencode  c2c-coord-cherry-pick  c2c-crush-wake  c2c-deliver-inbox  c2c-health  c2c-inbox-hook  c2c-init  c2c-inject  (+145 more)
.c2c/: config.toml  peers.md  repo.json
.collab/: archived-issues.txt  dm-matrix.md  ocaml-learnings.md  wishlist.md
.goal-loops/: active-goal.md  echild-hook-fix-and-swarm-health.md  opencode-launch-resume-iteration.md
.opencode/: opencode.json  package.json  tsconfig.json
.playwright-mcp/: page-2026-04-13T08-30-12-279Z.yml
.sitreps/: PROTOCOL.md  view-latest
_ingest/: README.md
data/: c2c_alias_words.txt  c2c_alias_words_toingest.txt  c2c_registry.yaml
deprecated/: c2c_auto_relay.py  c2c_inject.py  c2c_kimi_wire_bridge.py  c2c_relay_gc.py  restart-self
docker-tests/: _room_helpers.py  _signing_helpers.py  conftest.py  pytest.ini  test_broker_respawn_pid.py  test_claude_first_class_peer.py  test_coord_cherry_pick_e2e.py  test_cross_host_relay.py  test_dead_letter_e2e.py  test_deferrable_e2e.py  test_ephemeral_contract.py  test_ephemeral_dm_e2e.py  test_four_client_mesh.py  test_gemini_first_class_peer.py  test_kimi_first_class_peer.py  test_kimi_opencode_cross_host.py  test_monitor_leak_e2e.py  test_monitor_leak_guard.py  test_peer_pass_e2e.py  test_relay_mesh_probe.py  test_relay_outage.py  test_room_acl_e2e.py  test_s5_signing_e2e.py  test_sealed_sanity.py  test_two_container_roundtrip.py
docs/: CLAUDE.md  CNAME  Gemfile  HANDOVER.md  MSG_IO_METHODS.md  README.md  _config.yml  agent-file-schema-draft.md  agent-files.md  architecture.md  channel-notification-impl.md  client-delivery.md  commands.md  communication-tiers.md  cross-machine-broker.md  dnd-mode-spec.md  docker-testing.md  get-started.md  gui-architecture-prelim.md  gui-architecture.md  gui-getting-started.md  index.md  known-issues.md  monitor-json-schema.md  next-steps.md  ocaml-module-structure.md  opencode-plugin-statefile-protocol.md  overview.md  phase1-implementation-steps.md  pty-injection.md  relay-quickstart.md  remote-relay-transport.md  research.md  team-self-upgrade-process.md  verification.md  x-codex-client-changes.md
fish-functions/: x-add-todo.fish
gui/: README.md  feedback.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ocaml/: Banner.ml  Git_helpers.ml  broker_log.ml  c2c_agent_state_handlers.ml  c2c_alias_words.ml  c2c_broker.ml  c2c_capability.ml  c2c_capability.mli  c2c_identity_handlers.ml  c2c_inbox_handlers.ml  c2c_io.ml  c2c_kimi_notifier.ml  c2c_kimi_notifier.mli  c2c_mcp.ml  c2c_mcp.mli  c2c_mcp_helpers.ml  c2c_mcp_helpers_post_broker.ml  c2c_memory_handlers.ml  c2c_name.ml  c2c_pending_reply_handlers.ml  c2c_poker.ml  c2c_posix_stubs.c  c2c_pty_inject.ml  c2c_relay_connector.ml  c2c_repo_fp.ml  c2c_role.ml  c2c_role.mli  c2c_room_handlers.ml  c2c_schedule_fire.ml  c2c_schedule_fire.mli  c2c_schedule_handlers.ml  c2c_send_handlers.ml  c2c_start.ml  c2c_start.mli  c2c_time.ml  c2c_wire_bridge.ml  c2c_wire_daemon.ml  coord_fallthrough.ml  coord_fallthrough.mli  dune  (+19 more)
ocaml/cli/: c2c.ml  c2c_agent.ml  c2c_approval_paths.ml  c2c_authorizers.ml  c2c_broker_root_check.ml  c2c_cli.ml  c2c_commands.ml  c2c_coord.ml  c2c_deliver_inbox.ml  c2c_deliver_inbox.mli  c2c_deliver_inbox_log.ml  c2c_deliver_watch.ml  c2c_docs_drift.ml  c2c_doctor_cherry_pick_readiness.ml  c2c_doctor_schedule.ml  c2c_git_shim.ml  c2c_history.ml  c2c_kimi_hook.ml  c2c_mcp_config_rewriter.ml  c2c_memory.ml  c2c_migrate.ml  c2c_opencode_plugin_drift.ml  c2c_peer_pass.ml  c2c_relay_managed.ml  c2c_rooms.ml  c2c_schedule.ml  c2c_setup.ml  c2c_signing_helpers.ml  c2c_sitrep.ml  c2c_stats.ml  c2c_stickers.ml  c2c_stickers.mli  c2c_types.ml  c2c_utils.ml  c2c_worktree.ml  dune  role_designer_embedded.ml  role_templates_embedded.ml  test_c2c_approval_paths.ml  test_c2c_await_reply.ml  (+20 more)
ocaml/server/: c2c_mcp_server.ml  c2c_mcp_server_inner.ml  c2c_mcp_server_inner.mli  c2c_mcp_server_inner_bin.ml  dune  test_c2c_mcp_server_inner.ml
ocaml/test/: dune  test_agent_refine.ml  test_broker_log.ml  test_c2c_agent_state_handlers.ml  test_c2c_cli.ml  test_c2c_deliver_inbox.ml  test_c2c_identity_handlers.ml  test_c2c_inbox_handlers.ml  test_c2c_kimi_notifier.ml  test_c2c_mcp.ml  test_c2c_memory_handlers.ml  test_c2c_name.ml  test_c2c_oc_plugin.ml  test_c2c_pending_reply_handlers.ml  test_c2c_relay_connector.ml  test_c2c_role.ml  test_c2c_room_handlers.ml  test_c2c_schedule_fire.ml  test_c2c_schedule_persist.ml  test_c2c_send_handlers.ml  test_c2c_start.ml  test_c2c_time.ml  test_cross_host_e2e.ml  test_git_helpers.ml  test_git_shim.ml  test_peer_review.ml  test_pending_verdict.ml  test_post_compact_hook.ml  test_relay.ml  test_relay_auth_matrix.ml  test_relay_bindings.ml  test_relay_device_pair.ml  test_relay_e2e.ml  test_relay_e2e_integration.ml  test_relay_enc.ml  test_relay_forwarder.ml  test_relay_identity.ml  test_relay_mobile_pair.ml  test_relay_nudge.ml  test_relay_observer.ml  (+8 more)
ocaml/tools/: c2c_cold_boot_hook.ml  c2c_inbox_hook.ml  c2c_post_compact_hook.ml  c2c_post_compact_hook_bin.ml  dune
run-claude-inst.d/: c2c-r2-b1.json  c2c-r2-b2.json
run-codex-inst.d/: c2c-codex-b4.json
run-crush-inst.d/: crush-fresh-test.json  crush-xertrov-x-game.json  flame-berry.json
run-kimi-inst.d/: kimi-nova.json  kimi-xertrov-x-game.json
run-opencode-inst.d/: c2c-opencode-local.json  c2c-opencode-local.opencode.json  c2c-opencode-local.restart.json  opencode-peer-smoke.json  (+1 more)
(+1571 files in other folders)
