(rule
 (targets build_flags.ml)
 (action
  (with-stdout-to %{targets}
   (run /usr/bin/bash -lc "if [ \"${C2C_ENABLE_MCP_DEBUG_TOOL:-}\" = 1 ]; then echo 'let mcp_debug_tool_enabled = true'; elif [ \"${C2C_ENABLE_MCP_DEBUG_TOOL:-}\" = 0 ]; then echo 'let mcp_debug_tool_enabled = false'; elif [ \"%{profile}\" = release ]; then echo 'let mcp_debug_tool_enabled = false'; else echo 'let mcp_debug_tool_enabled = true'; fi"))))

; #420: embed git SHA at compile time so c2c --version no longer pays a
; ~1s shell-out to `git rev-parse` on every invocation. Falls back to
; "unknown" when git is unavailable (source-tarball install, sandboxed
; build env, etc.) — Version.git_sha consumers MUST treat that string
; as opaque (don't rely on hex shape). Override at build time by
; exporting C2C_BUILD_GIT_SHA in the build env.
(rule
 ; #420 fix(jungle FAIL): mark this rule as always-rerun so dune
 ; regenerates the SHA on every build invocation. Without this,
 ; dune caches the SHA across checkouts and the binary reports a
 ; stale build identifier — exactly the regression jungle
 ; reproduced. We can't `(deps (file ../.git/HEAD))` because
 ; `.git/HEAD` is outside the dune source tree (dune rejects with
 ; "No rule found"). `(deps (universe))` is the canonical idiom
 ; for "always run". The underlying `git rev-parse` is fast (<10ms)
 ; so the per-build cost is negligible vs. the correctness win.
 (deps (universe))
 (targets version_git_sha.ml)
 (action
  (with-stdout-to %{targets}
   (run /usr/bin/bash -lc "sha=\"${C2C_BUILD_GIT_SHA:-}\"; if [ -z \"$sha\" ]; then sha=\"$(git rev-parse --short=8 HEAD 2>/dev/null || echo unknown)\"; fi; echo \"let git_sha = \\\"$sha\\\"\""))))

  (library
   (name c2c_mcp)
   (wrapped false)
   (modules C2c_io Build_flags Version Version_git_sha Git_helpers C2c_name C2c_capability c2c_role Banner Peer_review c2c_mcp C2c_start C2c_repo_fp Relay Relay_identity Relay_nudge Relay_signed_ops C2c_wire_bridge C2c_wire_daemon C2c_poker Relay_remote_broker C2c_relay_connector Relay_enc Relay_ratelimit Relay_e2e Relay_ws_frame Relay_short_queue)
  (foreign_stubs (language c) (names c2c_posix_stubs))
  (libraries yojson logs lwt.unix cohttp-lwt-unix uuidm sqlite3
               base64 digestif.ocaml mirage-crypto-ec mirage-crypto-rng.unix
               ca-certs conduit-lwt-unix x509 ptime.clock.os threads.posix hacl-star))