(executable
 (name c2c)
  (modules c2c c2c_stats c2c_types c2c_commands c2c_setup c2c_utils c2c_worktree c2c_rooms c2c_stickers c2c_signing_helpers c2c_memory c2c_peer_pass c2c_agent c2c_coord role_designer_embedded)
 (libraries c2c_mcp cmdliner yojson logs unix lwt.unix cohttp-lwt-unix))

(test
 (name test_c2c_stats)
 (modules test_c2c_stats c2c_stats)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_worktree)
 (modules test_c2c_worktree c2c_worktree)
 (libraries c2c_mcp alcotest cmdliner str unix))
