 (executable
  (name c2c)
   (modules c2c c2c_stats c2c_sitrep c2c_relay_managed c2c_docs_drift c2c_opencode_plugin_drift c2c_types c2c_commands c2c_setup c2c_utils c2c_worktree c2c_rooms c2c_stickers c2c_signing_helpers c2c_memory c2c_peer_pass c2c_agent c2c_coord role_designer_embedded)
  (libraries c2c_mcp cmdliner yojson logs unix str lwt.unix cohttp-lwt-unix))

(test
 (name test_c2c_stats)
 (modules test_c2c_stats c2c_stats)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_worktree)
 (modules test_c2c_worktree c2c_worktree)
 (libraries c2c_mcp alcotest cmdliner str unix))

(test
 (name test_c2c_onboarding)
 (modules test_c2c_onboarding)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_memory)
 (modules test_c2c_memory c2c_memory)
 (libraries c2c_mcp alcotest cmdliner yojson str unix))
