 (executable
  (name c2c)
   (modules c2c c2c_stats c2c_sitrep c2c_relay_managed c2c_docs_drift c2c_opencode_plugin_drift c2c_types c2c_commands c2c_setup c2c_utils c2c_broker_root_check c2c_worktree c2c_rooms c2c_stickers c2c_signing_helpers c2c_memory c2c_migrate c2c_peer_pass c2c_agent c2c_coord c2c_git_shim c2c_history role_designer_embedded role_templates)
  (libraries c2c_mcp cmdliner yojson logs unix str lwt.unix cohttp-lwt-unix))

(test
 (name test_c2c_stats)
 (modules test_c2c_stats c2c_stats)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_worktree)
 (modules test_c2c_worktree c2c_worktree)
 (libraries c2c_mcp alcotest cmdliner str unix))

(test
 (name test_c2c_onboarding)
 (modules test_c2c_onboarding)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_memory)
 (modules test_c2c_memory c2c_memory)
 (libraries c2c_mcp alcotest cmdliner yojson str unix))

(test
 (name test_c2c_git_shim)
 (modules test_c2c_git_shim c2c_git_shim)
 (libraries alcotest))

(test
 (name test_c2c_history)
 (modules test_c2c_history c2c_history)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_c2c_migrate)
 (modules test_c2c_migrate c2c_migrate)
 (libraries alcotest unix))

(test
 (name test_c2c_coord)
 (modules test_c2c_coord c2c_coord)
 (libraries c2c_mcp alcotest cmdliner yojson str unix))

(test
 (name test_c2c_health)
 (modules test_c2c_health c2c_broker_root_check)
 (libraries alcotest))

(test
 (name test_c2c_opencode_plugin_drift)
 (modules test_c2c_opencode_plugin_drift c2c_opencode_plugin_drift)
 (libraries c2c_mcp alcotest cmdliner str unix))

(test
 (name test_c2c_peer_pass)
 (modules test_c2c_peer_pass c2c_peer_pass c2c_signing_helpers c2c_utils c2c_broker_root_check)
 (libraries c2c_mcp alcotest cmdliner yojson unix))

(test
 (name test_c2c_utils)
 (modules test_c2c_utils c2c_utils c2c_broker_root_check)
 (libraries c2c_mcp alcotest unix))

; Regression guard for #429 lazy-init (c2c --version <200ms median-of-5).
; Slate's follow-up suggestion to prevent silent regrowth of startup cost.
(test
 (name test_c2c_perf)
 (modules test_c2c_perf)
 (libraries alcotest unix)
 (deps c2c.exe))
