(test
 (name test_c2c_mcp)
 (modules test_c2c_mcp)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_relay_identity)
 (modules test_relay_identity)
 (libraries c2c_mcp alcotest str unix))

(test
 (name test_relay_bindings)
 (modules test_relay_bindings)
 (libraries c2c_mcp alcotest base64))

(test
 (name test_relay_signed_ops)
 (modules test_relay_signed_ops)
 (libraries c2c_mcp alcotest digestif.ocaml base64))

(test
 (name test_relay_auth_matrix)
 (modules test_relay_auth_matrix)
 (libraries c2c_mcp alcotest str))

(test
 (name test_wire_bridge)
 (modules test_wire_bridge)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_c2c_name)
 (modules test_c2c_name)
 (libraries c2c_mcp))

(test
 (name test_c2c_role)
 (modules test_c2c_role)
 (libraries c2c_mcp alcotest str unix))

(test
 (name test_c2c_start)
 (modules test_c2c_start)
 (libraries c2c_mcp alcotest unix))
