(test
 (name test_c2c_mcp)
 (modules test_c2c_mcp)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_relay_identity)
 (modules test_relay_identity)
 (libraries c2c_mcp alcotest str unix))

(test
 (name test_relay_bindings)
 (modules test_relay_bindings)
 (libraries c2c_mcp alcotest base64))

(test
 (name test_relay_signed_ops)
 (modules test_relay_signed_ops)
 (libraries c2c_mcp alcotest digestif.ocaml base64))

(test
 (name test_relay_auth_matrix)
 (modules test_relay_auth_matrix)
 (libraries c2c_mcp alcotest str))

(test
 (name test_wire_bridge)
 (modules test_wire_bridge)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_c2c_kimi_notifier)
 (modules test_c2c_kimi_notifier)
 (libraries c2c_mcp alcotest str unix))

(test
 (name test_c2c_name)
 (modules test_c2c_name)
 (libraries c2c_mcp alcotest))

(test
 (name test_c2c_role)
 (modules test_c2c_role)
 (libraries c2c_mcp alcotest str unix))

(test
 (name test_c2c_send_handlers)
 (modules test_c2c_send_handlers)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_start)
 (modules test_c2c_start)
 (libraries c2c_mcp alcotest cmdliner yojson unix)
 (deps %{exe:../cli/c2c.exe}))

(test
 (name test_relay_remote_broker)
 (modules test_relay_remote_broker)
 (libraries c2c_mcp alcotest))

(test
 (name test_relay_ratelimit)
 (modules test_relay_ratelimit)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_relay_pubkey)
 (modules test_relay_pubkey)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_relay_e2e)
 (modules test_relay_e2e)
 (libraries c2c_mcp alcotest base64 unix str))

(test
 (name test_relay_short_queue)
 (modules test_relay_short_queue)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_relay_mobile_pair)
 (modules test_relay_mobile_pair)
 (libraries c2c_mcp alcotest base64 mirage-crypto-ec unix))

(test
 (name test_relay_observer)
 (modules test_relay_observer)
 (libraries c2c_mcp alcotest unix))

; test_relay.ml stale: references C2c_relay.RegistrationLease (wrong module
; name post-inline-merge) + uses `let R = ...` pattern syntax that isn't
; S-A4: test_relay.ml updated to use Relay.* (was C2c_relay.*), local module
; aliases replaced with fully-qualified paths. 18 tests now compile and run.
(test
 (name test_relay)
 (modules test_relay)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_relay_e2e_integration)
 (modules test_relay_e2e_integration)
 (libraries c2c_mcp alcotest mirage-crypto-ec unix))

(test
 (name test_relay_observer_contract)
 (modules test_relay_observer_contract)
 (libraries c2c_mcp alcotest base64 mirage-crypto-ec unix str))

(test
 (name test_relay_device_pair)
 (modules test_relay_device_pair)
 (libraries c2c_mcp alcotest base64 mirage-crypto-ec unix))

(test
 (name test_agent_refine)
 (modules test_agent_refine)
 (libraries c2c_mcp alcotest unix str))

(test
 (name test_peer_review)
 (modules test_peer_review)
 (libraries c2c_mcp alcotest base64 unix))

(test
 (name test_broker_log)
 (modules test_broker_log)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_relay_nudge)
 (modules test_relay_nudge)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_post_compact_hook)
 (modules test_post_compact_hook)
 (libraries c2c_post_compact_hook_lib alcotest yojson unix))

(test
 (name test_c2c_relay_connector)
 (modules test_c2c_relay_connector)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_cross_host_e2e)
 (modules test_cross_host_e2e)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_relay_peer_relay)
 (modules test_relay_peer_relay)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_c2c_room_handlers)
 (modules test_c2c_room_handlers)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_relay_forwarder)
 (modules test_relay_forwarder)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_oc_plugin)
 (modules test_c2c_oc_plugin)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_agent_state_handlers)
 (modules test_c2c_agent_state_handlers)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_c2c_memory_handlers)
 (modules test_c2c_memory_handlers)
 (libraries c2c_mcp alcotest yojson unix))

(test
 (name test_git_helpers)
 (modules test_git_helpers)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_git_shim)
 (modules test_git_shim)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_c2c_cli)
 (modules test_c2c_cli)
 (libraries c2c_mcp alcotest unix))

(test
 (name test_c2c_schedule_fire)
 (modules test_c2c_schedule_fire)
 (libraries c2c_mcp alcotest unix))
